--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,7 +107,7 @@ header {
 }
 
 .logo {
-    background: url("../images/rosie.jpg");
+    background: url("../images/matt.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
