--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -377,7 +377,7 @@ footer {
     max-width: 80%;
 }
 
-button[type="submit"] {
+button {
     margin-top: 15px;
     margin-bottom: 20px;
     color: #fafafa;
